# alpacas

./: LICENSE  README.rst  TODO.rst  alpacas.cabal  heart.cabal
examples/: alpacas.hs
examples/j3h/: alpacas.hs
examples/j3h/css/: default.css
src/: Alpacas.hs  Heart.hs  Main.hs
src/Alpacas/: EditConfig.hs  Page.hs  ReadWriteFile.hs  Server.hs  Types.hs
