Name:                alpacas
Version:             0.1
Synopsis:            Experimental Web-based development environment
Description:         A Library for Programming A Client And Server
                     .
                     Web server that can reload itself, XMonad-style,
                     and has the ability to write its own
                     configuration file.
                     .
                     The idea is that it will be a development
                     environment that's inherently extensible, like
                     emacs, except using a modern platform (the Web).
License:             BSD3
License-File:        LICENSE
Author:              Josh Hoyt
Maintainer:          joshhoyt@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.6

data-files: examples/j3h/alpacas.hs,
            examples/j3h/css/default.css

Library
  hs-source-dirs: src
  Exposed-Modules:
    Alpacas,
    Alpacas.Types,
    Alpacas.EditConfig,
    Alpacas.ReadWriteFile

Executable alpacas
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base >= 4,
    blaze-html == 0.3.*,
    directory == 1.0.*,
    dyre == 0.8.*,
    bytestring >= 0.9.1 && <0.10,
    snap-core == 0.3.1.*,
    snap-server == 0.3.1.*,
    text,
    filepath >= 1.1 && <1.2,

    monads-fd >= 0.1 && <0.2,
    hexpat >= 0.19 && <0.20,
    unix,
    containers,
    MonadCatchIO-transformers,
    transformers == 0.2.*

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
